WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304511
[Site Isolation] Web Inspector: Remote iframe still can't console log with frame target console support
https://bugs.webkit.org/show_bug.cgi?id=304511
Summary
[Site Isolation] Web Inspector: Remote iframe still can't console log with fr...
Qianlang Chen
Reported
2025-12-19 11:03:18 PST
We need to follow up on [1] to ensure the shared InjectedScriptManager in a remote web process gets set up without a page target surfaced.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-12-19 11:03:24 PST
<
rdar://problem/166892920
>
Qianlang Chen
Comment 2
2025-12-19 11:19:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55717
Qianlang Chen
Comment 3
2025-12-19 11:32:41 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54133
EWS
Comment 4
2026-01-06 12:01:36 PST
Committed
305166@main
(283db2619c85): <
https://commits.webkit.org/305166@main
> Reviewed commits have been landed. Closing PR #55717 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug